# fifteen_game_solver

./: CMakeLists.txt  README.md  bfs_solver.cpp  bfs_solver.hpp  blind_solver.cpp  blind_solver.hpp  dfs_solver.cpp  dfs_solver.hpp  graph.hpp  hamming_heuristic.cpp  hamming_heuristic.hpp  heuristic.cpp  heuristic.hpp  heuristic_solver.hpp  main.cpp  manhattan_heuristic.cpp  manhattan_heuristic.hpp  node.cpp  node.hpp  operation.cpp  operation.hpp  solution.cpp  solution.hpp  solver.cpp  solver.hpp  state.cpp  state.hpp  type_defs.hpp
include/: bfs_solver.hpp  dfs_solver.hpp  graph.hpp  heuristic_solver.hpp  node.hpp  operation.hpp  solution.hpp  utils.hpp
src/: bfs_solver.cpp  dfs_solver.cpp  graph.cpp  hamming_heuristic.cpp  heuristic.cpp  manhattan_heuristic.cpp  node.cpp  operation.cpp  solver.cpp  utils.cpp
